[gd_scene load_steps=17 format=4 uid="uid://34xwvjxcg8d8"]

[ext_resource type="Script" uid="uid://dpkuc7735h4ey" path="res://Scripts/background_parallax.gd" id="1_b8ytw"]
[ext_resource type="Texture2D" uid="uid://drbmcuh20djrl" path="res://Sprites/Backgrounds/pond.png" id="2_mbnb1"]
[ext_resource type="Texture2D" uid="uid://cl4gccs7s4ppd" path="res://Sprites/Backgrounds/meadow.png" id="3_cxe20"]
[ext_resource type="Texture2D" uid="uid://djxek1cis2k50" path="res://Sprites/Backgrounds/forest.png" id="4_b8ytw"]
[ext_resource type="TileSet" uid="uid://6fblq1nssiv1" path="res://Sprites/Objects/new_tile_set.tres" id="6_a51ki"]
[ext_resource type="PackedScene" uid="uid://c8d84ydvpvoaj" path="res://Scenes/player.tscn" id="7_6xecf"]
[ext_resource type="Script" uid="uid://bdobgqympsrcg" path="res://Scripts/forest_tunnel.gd" id="7_mbnb1"]
[ext_resource type="PackedScene" uid="uid://dqaarv82jdnnw" path="res://Scenes/flower_p.tscn" id="9_nqprj"]
[ext_resource type="PackedScene" uid="uid://hqrmcbd4i631" path="res://Scenes/diamond_b.tscn" id="10_b8ytw"]
[ext_resource type="PackedScene" uid="uid://bpllua23yek0a" path="res://Scenes/enemy_owls.tscn" id="11_o5257"]
[ext_resource type="PackedScene" uid="uid://bhyt64pqn04l3" path="res://Scenes/enemy_frogs.tscn" id="12_2a174"]
[ext_resource type="PackedScene" uid="uid://dcsd3afgw1sx1" path="res://Scenes/meadow_tunnel.tscn" id="12_gxyip"]
[ext_resource type="PackedScene" uid="uid://diwx28u6k3nbb" path="res://Scenes/enemy_foxes.tscn" id="13_sw1t4"]
[ext_resource type="PackedScene" uid="uid://x6lkp80um7rr" path="res://Scenes/end_flag.tscn" id="14_6vef0"]
[ext_resource type="PackedScene" uid="uid://qgga3njbjj8s" path="res://Scenes/CutScenes/final_scene.tscn" id="15_mbnb1"]
[ext_resource type="AudioStream" uid="uid://ci7jyc0x21ujk" path="res://Audio/music_pond.wav" id="16_j11ov"]

[node name="Main" type="Node2D"]

[node name="Background" type="Parallax2D" parent="."]
script = ExtResource("1_b8ytw")

[node name="pond1" type="Sprite2D" parent="Background"]
scale = Vector2(0.8, 0.538)
texture = ExtResource("2_mbnb1")

[node name="pond2" type="Sprite2D" parent="Background"]
position = Vector2(819, 0)
scale = Vector2(0.8, 0.538)
texture = ExtResource("2_mbnb1")

[node name="pond3" type="Sprite2D" parent="Background"]
position = Vector2(1638, 0)
scale = Vector2(0.8, 0.538)
texture = ExtResource("2_mbnb1")

[node name="meadow1" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(22.6001, -0.544007)
scale = Vector2(0.8, 0.538)
texture = ExtResource("3_cxe20")

[node name="meadow2" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(831, 4.76837e-07)
scale = Vector2(0.8, 0.538)
texture = ExtResource("3_cxe20")

[node name="meadow3" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(1640.6, -0.544007)
scale = Vector2(0.8, 0.538)
texture = ExtResource("3_cxe20")

[node name="meadow4" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(2440.6, -0.544)
scale = Vector2(0.8, 0.538)
texture = ExtResource("3_cxe20")

[node name="forest1" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(267.6, -0.544005)
scale = Vector2(0.8, 0.538)
texture = ExtResource("4_b8ytw")

[node name="forest2" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(1085.6, -0.544006)
scale = Vector2(0.8, 0.538)
texture = ExtResource("4_b8ytw")

[node name="forest3" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(1902.6, -0.544006)
scale = Vector2(0.8, 0.538)
texture = ExtResource("4_b8ytw")

[node name="forest4" type="Sprite2D" parent="Background"]
visible = false
position = Vector2(2722, -1)
scale = Vector2(0.8, 0.538)
texture = ExtResource("4_b8ytw")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAACAAQAAAD//wAAAAACAAQAAAD+/wAAAAACAAQAAAD9/wAAAAACAAQAAAD8/wAAAAABAAQAAAABAAAAAAACAAQAAAACAAAAAAACAAQAAAADAAAAAAADAAQAAAAJAAIAAAADAAQAAAAHAAIAAAABAAQAAAAIAAIAAAACAAQAAAALAAAAAAABAAQAAAAMAAAAAAADAAQAAAAPAP7/AAABAAQAAAAQAP7/AAACAAQAAAARAP7/AAADAAQAAAATAPz/AAABAAQAAAAUAPz/AAACAAQAAAAVAPz/AAADAAQAAAAZAPz/AAABAAQAAAAaAPz/AAACAAQAAAAbAPz/AAACAAQAAAAcAPz/AAACAAQAAAAdAPz/AAADAAQAAAAgAP7/AAAAAAQAAAAjAP7/AAAAAAQAAAAmAP7/AAAAAAQAAAApAAAAAAABAAQAAAAqAAAAAAACAAQAAAArAAAAAAACAAQAAAAsAAAAAAADAAQAAAAvAAIAAAABAAQAAAAwAAIAAAADAAQAAAAyAAAAAAAAAAQAAAA1AP//AAAAAAQAAAA4AP7/AAAAAAQAAAA7AP3/AAABAAQAAAA8AP3/AAACAAQAAAA9AP3/AAADAAQAAABAAPv/AAABAAQAAABBAPv/AAACAAQAAABCAPv/AAADAAQAAABGAP3/AAABAAQAAABHAP3/AAADAAQAAABLAP3/AAABAAQAAABMAP3/AAACAAQAAABNAP3/AAACAAQAAABOAP3/AAACAAQAAABPAP3/AAADAAQAAABRAPv/AAAAAAQAAABTAP7/AAAAAAQAAABWAP7/AAAAAAQAAABaAP3/AAACAAQAAABbAP3/AAACAAQAAABcAP3/AAACAAQAAABZAP3/AAABAAQAAABdAP3/AAACAAQAAABeAP3/AAACAAQAAABfAP3/AAACAAQAAAAOAAIAAAAAAAQAAAAXAP7/AAAAAAQAAAAzAAIAAAABAAQAAAA0AAIAAAADAAQAAABDAP//AAABAAQAAABEAP//AAADAAQAAABgAP3/AAACAAQAAABhAP3/AAACAAQAAABiAP3/AAACAAQAAABjAP3/AAACAAQAAABkAP3/AAACAAQAAABlAP3/AAACAAQAAABmAP3/AAADAAQAAABcAPz/AAAFAAUAAAB5AAAAAAABAAIAAAB6AAAAAAACAAIAAAB7AAAAAAACAAIAAAB8AAAAAAACAAIAAAB9AAAAAAACAAIAAAB+AAAAAAADAAIAAACBAAIAAAABAAIAAACCAAIAAAADAAIAAACFAAMAAAABAAIAAACGAAMAAAADAAIAAACKAAcAAAABAAIAAACKAAYAAAALAAUAAACKAAUAAAAIAAUAAACJAAUAAAAKAAYAAACIAAUAAAAJAAYAAACKAAQAAAAIAAMAAACKAAMAAAAIAAUAABCLAAMAAAAKAAYAABCMAAMAAAAKAAYAABCNAAMAAAAJAAYAABCKAAIAAAAIAAQAAACKAAEAAAAHAAUAAACJAAEAAAAKAAYAAACIAAEAAAAJAAYAAACKAAAAAAAIAAQAAACKAP//AAAIAAUAABCLAP//AAAKAAYAABCMAP//AAAJAAYAABCKAP7/AAAIAAQAAACKAP3/AAAIAAMAAACKAPz/AAAIAAQAAACJAPn/AAANAAEAAACJAPr/AAANAAIAAACJAPv/AAAOAAEAAACKAPn/AAAOAAEAAACKAPr/AAAOAAIAAACKAPv/AAALAAMAAACLAPn/AAAMAAIAAACLAPr/AAAMAAAAAACLAPv/AAAMAAIAAACHAPr/AAAMAAAAAACHAPv/AAAMAAEAAACHAPz/AAAMAAIAAACIAPr/AAAMAAIAAACIAPv/AAANAAEAAACIAPz/AAANAAIAAACJAPz/AAAOAAIAAACIAPj/AAAOAAEAAACIAPn/AAAOAAIAAACJAPj/AAANAAAAAACKAPj/AAAOAAAAAACMAPr/AAANAAAAAACMAPv/AAANAAIAAACNAPr/AAAOAAAAAACNAPv/AAAOAAIAAACLAPf/AAAMAAAAAACLAPj/AAAMAAEAAACMAPf/AAANAAAAAACMAPj/AAANAAEAAACMAPn/AAANAAIAAACNAPf/AAAOAAAAAACNAPj/AAAOAAEAAACNAPn/AAAOAAIAAACGAPf/AAAMAAAAAACGAPj/AAAMAAEAAACGAPn/AAAMAAIAAACHAPf/AAANAAAAAACHAPj/AAANAAEAAACHAPn/AAANAAIAAACIAPf/AAAOAAAAAACLAAcAAAACAAIAAACMAAcAAAADAAIAAACPAP//AAABAAIAAACQAP//AAACAAIAAACRAP//AAADAAIAAACVAAMAAAAAAAIAAACVAAIAAAALAAUAAACVAAEAAAAIAAUAABCVAAAAAAAIAAQAAACVAP//AAAIAAMAAACVAP7/AAAIAAUAAACVAP3/AAAIAAQAAACWAAEAAAAJAAYAABCVAPz/AAAIAAUAABCWAPz/AAAKAAYAABCXAPz/AAAKAAYAABCYAPz/AAAJAAYAABCVAPv/AAAIAAQAAACVAPr/AAAIAAMAAACVAPn/AAAIAAQAAACVAPj/AAANAAIAAACUAPb/AAANAAEAAACUAPf/AAANAAEAAACUAPj/AAANAAIAAACVAPb/AAAMAAIAAACVAPf/AAANAAEAAACWAPb/AAANAAIAAACWAPf/AAANAAEAAACWAPj/AAANAAIAABCTAPb/AAAOAAIAAACTAPf/AAAMAAEAAACTAPj/AAAMAAIAAACTAPX/AAAOAAEAAACUAPX/AAANAAAAAACYAPf/AAAMAAEAABCXAPf/AAANAAEAAACYAPj/AAAMAAIAABCXAPj/AAANAAIAABCVAPX/AAAMAAEAAACWAPX/AAANAAEAAACXAPX/AAAOAAEAAACYAPX/AAAOAAAAAACYAPb/AAAOAAEAAACXAPb/AAAOAAIAAACSAPT/AAAMAAAAAACSAPX/AAAMAAEAAACSAPb/AAAMAAIAAACTAPT/AAAOAAAAAACVAPT/AAAMAAAAAACWAPT/AAANAAAAAACXAPT/AAAOAAAAAACaAP7/AAABAAIAAACbAP7/AAACAAIAAACcAP7/AAADAAIAAACfAAAAAAABAAIAAACgAAAAAAADAAIAAACjAAAAAAABAAIAAACkAAAAAAADAAIAAACnAP7/AAABAAIAAACoAP7/AAACAAIAAACpAP7/AAACAAIAAACqAP7/AAACAAIAAACrAP7/AAADAAIAAACwAAYAAAAAAAIAAACwAAUAAAALAAUAAACwAAQAAAAIAAUAAACwAAMAAAAIAAQAAACwAAIAAAAIAAQAAACwAAEAAAAIAAMAAACwAAAAAAAIAAQAAACwAP//AAALAAMAAACvAP7/AAAOAAQAAACvAP//AAAMAAIAAACwAP7/AAANAAEAAACxAP7/AAAMAAIAAACxAP//AAAOAAIAAACxAP3/AAAMAAEAAACyAP3/AAANAAEAAACyAP7/AAANAAIAAACzAP3/AAAOAAEAAACzAP7/AAAOAAIAAACvAAQAAAAJAAYAAACvAP3/AAAMAAAAAACwAP3/AAANAAAAAACuAP7/AAAMAAQAAACxAPz/AAAMAAAAAACyAPz/AAANAAAAAACzAPz/AAAOAAAAAAC2APv/AAABAAIAAAC3APv/AAADAAIAAAC7APz/AAABAAIAAAC8APz/AAACAAIAAAC9APz/AAADAAIAAADAAP3/AAAAAAIAAADDAP3/AAAAAAIAAADGAP3/AAAAAAIAAADJAP3/AAAAAAIAAADMAP//AAABAAIAAADNAP//AAACAAIAAADOAP//AAADAAIAAADRAAEAAAABAAIAAADSAAEAAAADAAIAAADsAAAAAAABAAIAAADtAAAAAAACAAIAAADuAAAAAAACAAIAAADvAAAAAAACAAIAAADwAAAAAAACAAIAAADxAAAAAAACAAIAAADyAAAAAAACAAIAAADzAAAAAAACAAIAAADuAP//AAAFAAUAAADXAAYAAAABAAIAAADYAAYAAAACAAIAAADZAAYAAAACAAIAAADeAAYAAAABAAIAAADfAAYAAAACAAIAAADkAAQAAAABAAIAAADiAAUAAAAAAAIAAADlAAQAAAACAAIAAADmAAQAAAADAAIAAADpAAIAAAADAAIAAADYAAUAAAALAAUAAADfAAUAAAALAAUAAADlAAMAAAALAAUAAADYAAQAAAAIAAQAAADYAAMAAAAIAAQAAADYAAIAAAAIAAMAAADYAAEAAAAIAAUAAADYAAAAAAAIAAMAAADfAAQAAAAIAAQAAADfAAIAAAAIAAMAAADlAAIAAAAIAAQAAADlAAEAAAAIAAMAAADlAAAAAAAIAAUAAADlAP//AAAIAAMAAADlAP7/AAAIAAUAABDlAP3/AAAIAAMAAADfAAEAAAAIAAQAAADXAAEAAAAKAAYAAADWAAEAAAAKAAYAAADVAAEAAAAJAAYAAADYAP//AAAIAAUAABDZAP//AAAKAAYAABDaAP//AAAJAAYAABDYAP7/AAAIAAQAAADYAP3/AAAIAAMAABDoAAIAAAABAAIAAADfAAAAAAAIAAMAABDeAP//AAAKAAYAAADdAP//AAAJAAYAAADfAP7/AAAIAAMAAADfAP3/AAAIAAQAAADfAPz/AAAIAAUAABDgAPz/AAAKAAYAABDhAPz/AAAJAAYAABDfAPv/AAAIAAMAAADfAPr/AAAIAAQAAADkAAAAAAAKAAYAAADjAAAAAAAJAAYAAADmAP7/AAAKAAYAABDnAP7/AAAJAAYAABDlAPz/AAAIAAUAAADkAPz/AAAKAAYAAADjAPz/AAAJAAYAAADlAPv/AAAIAAQAAADlAPr/AAAIAAQAAADlAPn/AAAIAAQAAADgAAYAAAADAAIAAADaAAYAAAADAAIAAADfAP//AAAIAAUAAADfAAMAAAAIAAQAAADUAPf/AAAMAAEAAADUAPj/AAAMAAEAAADUAPn/AAAMAAEAAADUAPr/AAAMAAEAAADUAPv/AAAMAAIAAADVAPf/AAANAAEAAADVAPj/AAANAAEAAADVAPn/AAAMAAQAAADVAPr/AAANAAEAAADVAPv/AAANAAIAAADWAPb/AAAMAAEAAADWAPf/AAAMAAIAAADWAPj/AAANAAEAAADWAPn/AAANAAQAAADWAPr/AAANAAEAAADWAPv/AAANAAIAAADXAPb/AAAOAAEAAADXAPf/AAAOAAIAAADXAPj/AAANAAEAAADXAPn/AAAOAAQAAADXAPr/AAANAAEAAADXAPv/AAANAAIAAADYAPf/AAANAAEAAADYAPj/AAANAAEAAADYAPn/AAANAAEAAADYAPr/AAANAAEAAADYAPv/AAALAAMAAADZAPf/AAANAAEAAADZAPj/AAAMAAAAAADZAPn/AAAMAAEAAADZAPr/AAAMAAIAAADZAPv/AAAOAAIAAADaAPf/AAAOAAEAAADaAPj/AAANAAAAAADaAPn/AAANAAEAAADaAPr/AAANAAIAAADbAPn/AAAOAAEAAADbAPr/AAAOAAIAAADUAPb/AAAMAAAAAADVAPb/AAANAAAAAADWAPX/AAAMAAAAAADXAPX/AAAOAAAAAADYAPb/AAANAAAAAADZAPb/AAANAAAAAADaAPb/AAAOAAAAAADbAPj/AAAOAAAAAADcAPf/AAAMAAEAAADcAPj/AAAMAAIAAADdAPb/AAAMAAEAAADdAPf/AAAMAAIAAADdAPj/AAANAAIAAADeAPb/AAANAAEAAADeAPf/AAANAAIAAADeAPj/AAANAAIAAADfAPb/AAAOAAEAAADfAPf/AAAOAAIAAADfAPj/AAALAAMAAADgAPf/AAAOAAEAAADgAPj/AAAOAAIAAADcAPb/AAAMAAAAAADdAPX/AAAMAAAAAADeAPX/AAANAAAAAADfAPX/AAAOAAAAAADgAPb/AAAOAAAAAADhAPP/AAAMAAIAAADiAPP/AAAOAAIAAADiAPT/AAAMAAEAAADiAPX/AAAMAAEAAADiAPb/AAANAAQAAADiAPf/AAAMAAIAAADjAPT/AAANAAEAAADjAPX/AAANAAEAAADjAPb/AAAOAAQAAADjAPf/AAANAAIAAADkAPT/AAANAAEAAADkAPX/AAANAAEAAADkAPb/AAANAAEAAADkAPf/AAANAAIAAADlAPT/AAANAAEAAADlAPX/AAANAAEAAADlAPb/AAANAAEAAADlAPf/AAALAAMAAADmAPP/AAAMAAEAAADmAPT/AAAMAAIAAADmAPX/AAANAAEAAADmAPb/AAANAAEAAADmAPf/AAANAAIAAADnAPP/AAANAAEAAADnAPT/AAANAAIAAADnAPX/AAAOAAEAAADnAPb/AAAMAAAAAADnAPf/AAAMAAEAAADoAPP/AAAOAAEAAADoAPT/AAAOAAIAAADhAPL/AAAMAAAAAADhAPb/AAAMAAQAAADiAPL/AAAOAAAAAADjAPP/AAANAAAAAADkAPP/AAANAAAAAADlAPP/AAANAAAAAADmAPL/AAAMAAAAAADnAPL/AAANAAAAAADoAPL/AAAOAAAAAADYAPz/AAAIAAMAAADfAPn/AAAIAAMAAADlAPj/AAAIAAMAAADoAPb/AAANAAAAAADpAPb/AAAOAAAAAADpAPf/AAAOAAEAAADpAPj/AAAOAAEAAADpAPn/AAAOAAIAAADnAPn/AAAMAAIAAADoAPn/AAANAAIAAADnAPj/AAAMAAEAAADoAPf/AAANAAEAAADoAPj/AAANAAEAAAAGAQAAAAABAAAAAAAHAQAAAAACAAAAAAAIAQAAAAACAAAAAAAJAQAAAAADAAAAAAANAQEAAAABAAAAAAAOAQEAAAACAAAAAAAPAQEAAAACAAAAAAAQAQEAAAACAAAAAAARAQEAAAACAAAAAAASAQEAAAADAAAAAAAVAf//AAABAAAAAAAWAf//AAADAAAAAAAYAf3/AAABAAAAAAAZAf3/AAADAAAAAAAdAQYAAAAAAAAAAAAdAQUAAAAGAAUAAAAdAQQAAAAHAAQAAAAdAQMAAAAHAAMAABAdAQIAAAAHAAUAAAAdAQEAAAAHAAMAAAAdAQAAAAAHAAQAAAAdAf//AAAGAAMAAAAdAf7/AAAKAAEAAAAdAf3/AAAJAAAAAAAcAQIAAAAHAAYAAAAcAf//AAAJAAIAAAAeAf//AAAKAAIAAAAfAf//AAALAAIAAAAcAf7/AAAJAAAAAAAeAf3/AAAKAAAAAAAfAf3/AAALAAAAAAAfAf7/AAAMAAMAAAAeAf7/AAAKAAEAAAAgAf7/AAAOAAMAAAAlAQQAAAABAAAAAAAmAQQAAAADAAAAAAAlAQMAAAAGAAUAAAAlAQIAAAAHAAQAAAAlAQEAAAAHAAUAAAAkAQEAAAAIAAYAAAAjAQEAAAAHAAYAAAAlAQAAAAAHAAQAAAAlAf//AAAHAAUAABAmAf//AAAIAAYAAAAnAf//AAAHAAYAABAlAf7/AAAHAAMAAAAlAfz/AAAGAAMAAAAlAf3/AAAHAAQAAAAmAfz/AAALAAIAAAAkAfz/AAAJAAIAAAAlAfn/AAAKAAAAAAAlAfr/AAAKAAEAAAAkAfn/AAALAAIAAAAkAfr/AAAJAAEAAAAmAfn/AAAJAAEAAAAmAfr/AAAJAAIAAAAkAfv/AAAJAAEAAAAmAfv/AAALAAEAAAAlAfv/AAAKAAEAAAAmAfj/AAAJAAAAAAAnAfj/AAAKAAAAAAAnAfn/AAAKAAEAAAAnAfr/AAAKAAIAAAAoAfj/AAALAAAAAAAoAfn/AAALAAEAAAAoAfr/AAALAAIAAAAjAfj/AAAJAAAAAAAjAfn/AAAJAAIAAAAkAfj/AAALAAAAAAAqAQEAAAABAAAAAAArAQEAAAACAAAAAAAsAQEAAAACAAAAAAAtAQEAAAACAAAAAAAuAQEAAAACAAAAAAAvAQEAAAACAAAAAAAwAQEAAAADAAAAAAAzAQIAAAAAAAAAAAA2AQIAAAAAAAAAAAA4AQEAAAAAAAAAAAA6AQAAAAAAAAAAAAA8Af7/AAABAAAAAAA9Af7/AAACAAAAAAA+Af7/AAADAAAAAABBAfv/AAACAAAAAABCAfv/AAADAAAAAABAAQEAAAACAAAAAABBAQEAAAACAAAAAABCAQEAAAADAAAAAABFAQMAAAABAAAAAABGAQMAAAADAAAAAABJAQUAAAABAAAAAABKAQUAAAACAAAAAABLAQUAAAACAAAAAABMAQUAAAACAAAAAABNAQUAAAACAAAAAABOAQUAAAACAAAAAABPAQUAAAADAAAAAABMAQQAAAAGAAUAAABMAQMAAAAHAAQAAABMAQIAAAAHAAUAABBMAQEAAAAHAAMAABBMAQAAAAAHAAUAAABNAQIAAAAIAAYAABBOAQIAAAAHAAYAABBLAQAAAAAIAAYAAABKAQAAAAAIAAYAAABJAQAAAAAHAAYAAABMAf//AAAHAAQAAABMAf7/AAAHAAUAABBNAf7/AAAIAAYAABBOAf7/AAAHAAYAABBMAf3/AAAHAAMAAABMAfz/AAAHAAQAAABMAfv/AAAHAAMAAABMAfr/AAAGAAMAAABJAff/AAAJAAAAAABJAfj/AAALAAAAAABKAff/AAAKAAAAAABKAfj/AAAKAAEAAABLAff/AAAKAAAAAABLAfj/AAAKAAEAAABMAff/AAAKAAAAAABMAfj/AAAKAAEAAABNAff/AAALAAAAAABNAfj/AAALAAEAAABNAfn/AAALAAEAAABNAfr/AAALAAIAAABJAfn/AAALAAIAAABJAfr/AAAJAAIAAABKAfr/AAAKAAIAAABLAfr/AAAKAAIAAABKAfn/AAAKAAEAAABLAfn/AAAKAAEAAABMAfn/AAAKAAEAAABHAfj/AAAJAAAAAABHAfn/AAAJAAIAAABIAfj/AAAKAAAAAABIAfn/AAAKAAIAAABFAfr/AAAAAAAAAABRAf7/AAABAAAAAABSAf7/AAACAAAAAABTAf7/AAADAAAAAABRAfn/AAABAAAAAABSAfn/AAADAAAAAABVAfz/AAABAAAAAABWAfz/AAACAAAAAABXAfz/AAACAAAAAABYAfz/AAACAAAAAABZAfz/AAACAAAAAABaAfz/AAACAAAAAABbAfz/AAADAAAAAAByAf//AAACAAAAAABzAf//AAACAAAAAAB0Af//AAACAAAAAAB1Af//AAADAAAAAABxAf//AAACAAAAAABwAf//AAACAAAAAABeAf//AAABAAAAAABfAf//AAADAAAAAABkAQIAAAADAAAAAABjAQIAAAACAAAAAABiAQIAAAABAAAAAABqAQcAAAABAAAAAABrAQcAAAACAAAAAABsAQcAAAADAAAAAABrAQYAAAAGAAUAAABrAQUAAAAHAAUAAABrAQQAAAAHAAMAAABrAQMAAAAHAAUAABBrAQIAAAAHAAQAAABrAQAAAAAHAAUAAABqAQUAAAAIAAYAAABpAQUAAAAIAAYAAABoAQUAAAAHAAYAAABsAQMAAAAIAAYAABBtAQMAAAAHAAYAABBrAf//AAAHAAQAAABrAf7/AAAHAAQAAABrAf3/AAAHAAQAAABrAfz/AAAHAAQAAABrAfv/AAAGAAMAAABoAQAAAAAHAAYAAABpAQAAAAAIAAYAAABqAQAAAAAIAAYAAABrAQEAAAAHAAQAAABqAfv/AAAKAAIAAABsAfv/AAAKAAIAAABpAfv/AAAKAAIAAABoAfv/AAALAAEAAABnAfv/AAAKAAEAAABnAfj/AAAKAAIAAABnAfn/AAAJAAEAAABnAfr/AAAKAAAAAABnAff/AAAKAAEAAABoAff/AAALAAEAAABpAff/AAAKAAAAAABqAff/AAAKAAAAAABrAff/AAAJAAIAAABsAff/AAAKAAIAAABtAff/AAAKAAIAAABuAff/AAAKAAIAAABuAfj/AAALAAEAAABuAfn/AAALAAIAAABtAfv/AAALAAIAAABoAfj/AAALAAIAAABoAfn/AAAKAAEAAABpAfn/AAAKAAEAAABqAfn/AAAJAAEAAABqAfr/AAAJAAIAAABrAfn/AAAKAAEAAABsAfn/AAALAAEAAABsAfj/AAALAAAAAABrAfj/AAAKAAAAAABqAfj/AAAJAAAAAABrAfr/AAAKAAIAAABpAfr/AAAKAAEAAABoAfr/AAALAAAAAABpAfj/AAAKAAEAAABtAfj/AAAKAAEAAABtAfn/AAAKAAEAAABtAfr/AAALAAEAAABsAfr/AAALAAIAAABmAfr/AAAJAAAAAABmAfv/AAAJAAEAAABmAfz/AAAJAAIAAABnAfz/AAAKAAIAAABoAfz/AAALAAIAAABmAfb/AAAKAAEAAABmAff/AAAKAAEAAABmAfj/AAAJAAIAAABnAfb/AAAKAAEAAABoAfb/AAALAAAAAABlAfX/AAAJAAAAAABlAfb/AAAJAAEAAABlAff/AAAJAAIAAABmAfX/AAAKAAAAAABnAfX/AAALAAAAAABrAfX/AAAJAAAAAABrAfb/AAAJAAEAAABsAfX/AAAKAAAAAABsAfb/AAAKAAEAAABtAfX/AAAKAAAAAABtAfb/AAAKAAEAAABuAfX/AAAKAAAAAABuAfb/AAAKAAEAAABvAfX/AAALAAAAAABvAfb/AAALAAEAAABvAff/AAALAAIAAABvAf//AAABAAAAAAD0AAAAAAADAAIAAABAAfz/AAAAAAAAAAA/AQEAAAABAAAAAACUAP7/AAAKAAYAAACTAP7/AAAJAAYAAAA=")
tile_set = ExtResource("6_a51ki")

[node name="Label3" type="Label" parent="."]
offset_left = -121.0
offset_top = -114.0
offset_right = 65.0
offset_bottom = -65.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Last trip of the week!
Don't disappoint Honey duck!"

[node name="Tunnels" type="Node2D" parent="."]
position = Vector2(155, -1)

[node name="MeadowTunnel" parent="Tunnels" instance=ExtResource("12_gxyip")]
position = Vector2(1634, -53)
scale = Vector2(2, 2)

[node name="ForestTunnel" parent="Tunnels" instance=ExtResource("12_gxyip")]
position = Vector2(4228, 1)
scale = Vector2(2, 2)
script = ExtResource("7_mbnb1")

[node name="Player" parent="." instance=ExtResource("7_6xecf")]
position = Vector2(0, 1)

[node name="Flowers" type="Node" parent="."]

[node name="FlowerP" parent="Flowers" instance=ExtResource("9_nqprj")]
position = Vector2(585, -41)

[node name="FlowerP2" parent="Flowers" instance=ExtResource("9_nqprj")]
position = Vector2(1271, -59)

[node name="FlowerP3" parent="Flowers" instance=ExtResource("9_nqprj")]
position = Vector2(2528, 121)

[node name="FlowerP4" parent="Flowers" instance=ExtResource("9_nqprj")]
position = Vector2(6011, 32)

[node name="Diamonds" type="Node" parent="."]

[node name="DiamondB" parent="Diamonds" instance=ExtResource("10_b8ytw")]
position = Vector2(1017, -39)

[node name="DiamondB2" parent="Diamonds" instance=ExtResource("10_b8ytw")]
position = Vector2(4043, -76)

[node name="DiamondB3" parent="Diamonds" instance=ExtResource("10_b8ytw")]
position = Vector2(6075, -130)

[node name="Enemies" type="Node" parent="."]

[node name="EnemyOwls" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(2376, 80)
move_speed = 30.0

[node name="EnemyOwls2" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(2553, 9)
move_speed = 40.0

[node name="EnemyOwls3" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(2841, 7)

[node name="EnemyOwls4" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(2991, 19)
move_speed = 30.0

[node name="EnemyOwls5" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(3115, -7)

[node name="EnemyOwls6" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(3334, -50)
move_speed = 50.0

[node name="EnemyOwls7" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(3494, -24)

[node name="EnemyOwls8" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(3654, -21)
move_speed = 30.0

[node name="EnemyOwls9" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(3961, 8)

[node name="EnemyOwls10" parent="Enemies" instance=ExtResource("11_o5257")]
position = Vector2(4080, -50)
move_speed = 40.0

[node name="EnemyFrogs" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(260, 25)
jump_height = 80.0
move_speed = 60.0

[node name="EnemyFrogs2" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(423, -47)

[node name="EnemyFrogs3" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(639, -47)
jump_height = 100.0

[node name="EnemyFrogs4" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(936, 26)
jump_height = 70.0

[node name="EnemyFrogs5" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(1223, -27)
jump_height = 100.0
move_speed = 60.0

[node name="EnemyFrogs6" parent="Enemies" instance=ExtResource("12_2a174")]
position = Vector2(1557, -46)

[node name="EnemyFoxes" parent="Enemies" instance=ExtResource("13_sw1t4")]
position = Vector2(4870, 4)
scale = Vector2(1.5, 1.5)

[node name="EnemyFoxes2" parent="Enemies" instance=ExtResource("13_sw1t4")]
position = Vector2(5405, 5)
scale = Vector2(1.5, 1.5)
move_speed = 40.0

[node name="EnemyFoxes3" parent="Enemies" instance=ExtResource("13_sw1t4")]
position = Vector2(5970, 78)
scale = Vector2(1.5, 1.5)

[node name="EnemyFoxes4" parent="Enemies" instance=ExtResource("13_sw1t4")]
position = Vector2(6183, -84)
scale = Vector2(1.5, 1.5)
move_speed = 30.0

[node name="EndFlag" parent="." instance=ExtResource("14_6vef0")]
position = Vector2(6699, -25)
scene_to_load = ExtResource("15_mbnb1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_j11ov")
volume_db = -20.0
autoplay = true

[node name="Label" type="Label" parent="."]
offset_left = 1695.0
offset_top = -149.0
offset_right = 1900.0
offset_bottom = -126.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "There is no turning back."

[node name="Label2" type="Label" parent="."]
offset_left = 4257.0
offset_top = -106.0
offset_right = 4462.0
offset_bottom = -83.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "There is no turning back."
